Fixed aligning issue in form checkbox

--- a/src/ui/Form/FormRow/form-row.scss
+++ b/src/ui/Form/FormRow/form-row.scss
@@ -3,8 +3,9 @@
 :host {
     @extend %comp-form-row;
 
-     &, *:not(zen-ui-radio-tabs) {
+    &, *:not(zen-ui-radio-tabs) {
         @extend %reset;
+        vertical-align: middle;
     }
     input, select, textarea, input[type="file"] + span.input {
         @extend %comp-form-input-general;
